--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
             "io.qameta.allure:allure-selenide:$allureVersion",
             "org.aspectj:aspectjweaver:1.9.6",
             "org.junit.jupiter:junit-jupiter-api:$junitVersion",
+            "org.aeonbits.owner:owner:1.0.12",
             "com.github.javafaker:javafaker:1.0.2",)
     compileOnly 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
@@ -55,9 +56,21 @@ tasks.withType(Test) {
 
     testLogging {
         lifecycle {
-//            events "started", "failed"
             events "started", "skipped", "failed", "standard_error", "standard_out"
             exceptionFormat "short"
         }
+    }
+}
+
+task properties_tests(type: Test) {
+    useJUnitPlatform {
+        includeTags "properties"
+    }
+}
+
+task all_tests(type: Test) {
+    useJUnitPlatform {
+        includeTags "properties"
+        includeTags "owner"
     }
 }
