добавлен параметр url

--- a/build.gradle
+++ b/build.gradle
@@ -62,9 +62,9 @@ tasks.withType(Test) {
     }
 }
 
-task properties_tests(type: Test) {
+task practiceForm_tests(type: Test) {
     useJUnitPlatform {
-        includeTags "properties"
+        includeTags "PracticeForm"
     }
 }
 task owner_tests(type: Test) {
@@ -74,7 +74,7 @@ task owner_tests(type: Test) {
 }
 task all_tests(type: Test) {
     useJUnitPlatform {
-        includeTags "properties"
+        includeTags "PracticeForm"
         includeTags "owner"
     }
 }
